[package]
name = "wgpu-tutorial"
version = "0.0.0"
edition = "2021"

[dependencies]
image = "0.23"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = "0.12"
pollster = "0.2"
tobj = "3.0"
bytemuck = { version = "1.4", features = [ "derive" ] }

[build-dependencies]
fs_extra = "1.2"
glob = "0.3"
